--- a/2channel/2channel.csproj
+++ b/2channel/2channel.csproj
@@ -38,6 +38,9 @@
       <HintPath>..\packages\AngleSharp.Scripting.JavaScript.0.5.1\lib\portable-windows8+net45+windowsphone8+wpa+monoandroid+monotouch\AngleSharp.Scripting.JavaScript.dll</HintPath>
       <Private>True</Private>
     </Reference>
+    <Reference Include="DeepCopy">
+      <HintPath>..\..\DeepCopy\DeepCopy\bin\Release\DeepCopy.dll</HintPath>
+    </Reference>
     <Reference Include="jint, Version=2.10.4.0, Culture=neutral, PublicKeyToken=2e92ba9c8d81157f, processorArchitecture=MSIL">
       <HintPath>..\packages\jint.2.10.4\lib\net45\jint.dll</HintPath>
       <Private>True</Private>
@@ -58,8 +61,10 @@
     <Reference Include="System.Xml" />
   </ItemGroup>
   <ItemGroup>
+    <Compile Include="Board.cs" />
+    <Compile Include="BoardList.cs" />
     <Compile Include="Res.cs" />
-    <Compile Include="ThreadInfomation.cs" />
+    <Compile Include="Thre.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
     <Compile Include="ThreadList.cs" />
     <Compile Include="UseCgis.cs" />
