--- a/2channelTests/2channelTests.csproj
+++ b/2channelTests/2channelTests.csproj
@@ -51,8 +51,11 @@
     </Otherwise>
   </Choose>
   <ItemGroup>
+    <Compile Include="BoardListTests.cs" />
+    <Compile Include="BoardTests.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
-    <Compile Include="ThreadInfomationTests.cs" />
+    <Compile Include="ResTests.cs" />
+    <Compile Include="UseCgisTests.cs" />
   </ItemGroup>
   <ItemGroup>
     <ProjectReference Include="..\2channel\2channel.csproj">
